<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_camera"
            android:title="@string/menu_camera" />

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:icon="@drawable/ic_send_parcel"
            android:title="@string/menu_send_parcel" />
        <item
            android:icon="@drawable/ic_track_parcel"
            android:title="@string/menu_track_parcel" />

        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_exit"
            android:title="@string/menu_sign_out" />
    </group>
</menu>